# iron-bbs

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.sh
.sqlx/: query-086bf6a0313ab2ab6699b79913cbcdb2e30bbf6889ed170ce8ea51c248b0633e.json  query-162bfba5a7071f20a064025fa85009b3df57b76306383401943730c2c925ba52.json  query-3ec88ab8787bd5d4a2b32675b10afc556783a7ad73202e0471f7d4bff69b98ca.json  query-589ed82558cd21fafc9ffaf6f1125908c6a54bee9bcfcac54a277261aae85b5b.json  query-a48d37f86bd80766c75d1d63a369e1a1efb4494756ef5bd8d3ce01a2bcfd6d04.json  query-a8f5eb62cce71fc2c5ff53551c57a008e635b39e4f15e29ef05e4402fd2d0606.json  query-b0e9a36620867f30637c7b854a9cb20a7ee96d2be4f129eaca65e29df9c5e185.json  query-bdbc05a181926c63e07ffac9f0d0102e1f5b4a0acf2db9be971146c6923316f4.json  query-c3889be01a81fde74ce822eb70d5cdd89b432e1c0d2d83b4a72548dd06f15f9f.json  query-c6a6583676ef8f87086ae5a403c91ce2870e23c86dbf3eb91ccdc8dc3919562f.json  query-e79c61186a9a0ec05cb59fab07451c68de3debd2cd6d68c2c68a5e5990c9a425.json
docs/: AUTHENTICATION.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  PTT_LOGIN_IMPLEMENTATION.md  SSH_TROUBLESHOOTING.md
migrations/: 20240101000001_create_users.sql  20240101000002_create_posts.sql  20240101000003_seed_data.sql  20240101000004_create_sessions.sql  20240101000005_create_authorized_keys.sql  20240101000006_add_login_tracking.sql  20240101000007_create_boards.sql  20240101000008_seed_boards.sql
scripts/: manual_test.txt  test.sh  test_e2e.py  test_e2e.sh  test_login.sh  test_ssh_login.sh
src/: lib.rs  (+8 more)
(+20 files in other folders)
